--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PH TUBE</title>
+    <link rel="stylesheet" href="style.css">
+
+
     
 <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.11/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
+<style>
+  .active {
+    background-color: red;
+    color: white;
+  }
+</style>
+
 </head>
 <body>
     <header>
