Implement the search functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <img src="Logo.png" alt="" >
         </div>
         <div class="search">
-            <label class="input input-bordered flex items-center gap-2">
+            <label id="searchInput" class="input input-bordered flex items-center gap-2">
                 <input type="text" class="grow" placeholder="Search" />
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
